--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -1,36 +1,24 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to ahead's people profile import documentation
+description: Learn how to use the import API to enhance ahead's user profiles.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Learn how to use the import API to enhance ahead's user profiles
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/ahead_a.svg
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Howto - Get started by doing imports with Postman
+      link: /guides/get-apikey-and-use-postman/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ## Next steps
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+<CardGrid>
+	<Card title="Get an overview" icon="rocket">
+		[Get an overview](/reference/01-background/) and start browsing how to authorize API-calls and browse the request & response specification.
 	</Card>
 </CardGrid>
