another bunch of stuff

--- a/documentation/src/content/docs/reference/01 background.mdx
+++ b/documentation/src/content/docs/reference/01 background.mdx
@@ -30,7 +30,7 @@ Most of the documentation here deals with how to use the import API. Based on th
 <LinkCard
   title="Authorization & Authentication"
   description="Learn how to authorize your requests"
-  href="/reference/03-authentication-authorization/"
+  href="../03-authentication-authorization/"
 />
 
 :::caution
