next deploy to see if the links work

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome to ahead's people profile import documentation
+title: Welcome to <u>a</u>head's people profile import documentation
 description: Learn how to use the import API to enhance ahead's user profiles.
 template: splash
 hero:
@@ -20,5 +20,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <CardGrid>
 	<Card title="Get an overview" icon="rocket">
 		[Get an overview](reference/01-background/) and start browsing how to authorize API-calls and browse the request & response specification.
+	</Card>
+	<Card title="Jump into the Endpoint specification" icon="puzzle">
+		[Visit the endpoint's description](reference/04-endpoint/).
 	</Card>
 </CardGrid>
