--- a/documentation/src/content/docs/reference/01 background.mdx
+++ b/documentation/src/content/docs/reference/01 background.mdx
@@ -3,7 +3,7 @@ title: Introduction & Background
 description: Introducton to the concepts of ahead's people profile
 ---
 import { Image } from 'astro:assets';
-import { LinkCard } from '@astrojs/starlight/components';
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 import image from '../../../assets/concept-overview.jpg'
 
 
@@ -27,15 +27,18 @@ ahead's default values come from Microsoft Entra. Once ahead has been consented 
 
 Most of the documentation here deals with how to use the import API. Based on the fields defined in the **PPD**, customers can use our API to enrich user profiles with additional data.
 
-<LinkCard
-  title="Authorization & Authentication"
-  description="Learn how to authorize your requests"
-  href="../03-authentication-authorization/"
-/>
-
-:::caution
-Add links to relevant sections
-:::
+<CardGrid>
+    <LinkCard
+        title="Authorization & Authentication"
+        description="Learn how to authorize your requests"
+        href="../03-authentication-authorization/"
+    />
+    <LinkCard
+        title="calling the Endpoint"
+        description="Read the specification of the people import API"
+        href="../04-endpoint/"
+    />
+</CardGrid>
 
 ## user fields
 
