taken in all content from the word document

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -21,7 +21,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Get an overview" icon="rocket">
 		[Get an overview](reference/01-background/) and start browsing how to authorize API-calls and browse the request & response specification.
 	</Card>
-	<Card title="Jump into the Endpoint specification" icon="puzzle">
-		[Visit the endpoint's description](reference/04-endpoint/).
+	<Card title="Check out the Endpoint specification" icon="puzzle">
+		[Visit the endpoint's description](reference/04-endpoint/) and understand how to form an import request.
 	</Card>
 </CardGrid>
