2 guides to peruse

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -7,8 +7,8 @@ hero:
   image:
     file: ../../assets/ahead_a.svg
   actions:
-    - text: Howto - Get started by doing imports with Postman
-      link: /guides/get-apikey-and-use-postman/
+    - text: Get started by doing imports with Postman
+      link: /guides/01-get-apikey-and-use-postman/
       icon: right-arrow
       variant: primary
 ---
