small review and v1 ready mehopes

--- a/documentation/src/content/docs/guides/01-get-apikey-and-use-postman.mdx
+++ b/documentation/src/content/docs/guides/01-get-apikey-and-use-postman.mdx
@@ -53,6 +53,12 @@ back as the response body.
 
 <Image src={image4} alt="The response status in postman" />
 
+<LinkCard
+    title="When things go wrong"
+    description="If the response status code is not 200, check out our guide what you can learn about your request from ahead's Import Logs"
+    href="../03-things-going-wrong/"
+/>
+
 ## The import log
 
 When you head back to the same page in ahead where you got the API-Keys you should notice that your import
