--- a/documentation/src/content/docs/reference/06 sending-files.mdx
+++ b/documentation/src/content/docs/reference/06 sending-files.mdx
@@ -2,6 +2,7 @@
 title: Sending files through the import API
 description: Learn how to send files to ahead
 tableOfContents: false
+next: false
 ---
 
 In order to send a file to ahead, a field needs to be specified in the people profile definition to accept a certain kind of file.
@@ -34,7 +35,7 @@ It would upload a new file named **March 2023.pdf** under the **salary** categor
 You can send up to **50 files** per multipart request.
 
 :::danger
-Regardless of whether you send 50 files on a request or, please note that the 
+Regardless of whether you send 50 files on a request, please note that the 
 total size of the request should **not** exceed **104 Megabytes**. 
 The request will not be processed if it exceeds that size.
 :::
