--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome to <u>a</u>head's people profile import documentation
+title: Welcome to ahead's people profile import documentation
 description: Learn how to use the import API to enhance ahead's user profiles.
 template: splash
 hero:
