--- a/documentation/src/content/docs/reference/04 endpoint.mdx
+++ b/documentation/src/content/docs/reference/04 endpoint.mdx
@@ -5,8 +5,8 @@ description: How to reach the endpoint and basic settings around the HTTP Header
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 
 :::note
-<h4>The API URL of the import is</h4>
-<h5>https://connect.aheadintranet.com/api/PeopleImport</h5>
+<h4>The API URL of the update is</h4>
+<h5>htt<span>ps://connect</span>.aheadintranet.com/api/PeopleImport</h5>
 :::
 
 ## Request
@@ -70,12 +70,16 @@ In this case, you will need to send `multipart/form-data`-requests
 ## Response
 
 :::caution
-Imports will be accepted on an employee-by-employee basis. That means that when the API returns the `422` error code, some of the sent employees may have been successfully imported. In such cases, you will need to identify the proper logs that are correlated with the GUID provided in the body of the response through ahead’s “Integrations” section in the management pages.
+Updates will be accepted on a profile-by-profile basis. 
+This means that when the API returns the `422` error code, some of the sent profile updates were successful. 
+In such cases, you will need to identify the proper logs that are correlated with the GUID provided in the body of the 
+response through ahead’s “Integrations” section in the management pages.
 :::
 
 ### Status Code 200 
 
-The complete request has been processed without issues. The body of the response will contain a GUID with which this import call can be identified in the import logs (which will be accessible through ahead’s admin interface).
+The complete request has been processed without issues. The body of the response will contain a GUID with which this particular request
+can be identified in the import logs.
 
 ### Status Code 400 
 
@@ -91,7 +95,9 @@ A request contains more than 50 people updates.
 
 ### Status Code 422
 
-If there are issues with the data itself, which may only apply to a part of the sent data, a status code of `422` (unprocessable content) will be returned. The body of the response will contain a GUID with which this import call can be identified such that it can be analyzed which specific import command went wrong.
+If there are issues with the data itself, which may only apply to a part of the sent data, a status code of `422` (unprocessable content) will be returned. 
+The body of the response will contain a GUID with which this particular request can be identified such that it can be analyzed 
+which specific update command went wrong.
 
 Typical conditions that would lead to a 422 response are:
 •	A particular JSON object could not be correlated with an existing entry (missing / wrong employeeId field)
