some wording improvements

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: Welcome to ahead's people profile import documentation
-description: Learn how to use the import API to enhance ahead's user profiles.
+title: Welcome to ahead's people profiles API documentation
+description: Learn how to use the profiles API to enhance ahead's user profiles.
 template: splash
 hero:
   tagline: Learn how to use the import API to enhance ahead's user profiles
   image:
     file: ../../assets/ahead_a.svg
   actions:
-    - text: Get started by doing imports with Postman
+    - text: Get started by doing profile updates with Postman
       link: guides/01-get-apikey-and-use-postman/
       icon: right-arrow
       variant: primary
@@ -22,6 +22,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		[Get an overview](reference/01-background/) and start browsing how to authorize API-calls and browse the request & response specification.
 	</Card>
 	<Card title="Check out the Endpoint specification" icon="puzzle">
-		[Visit the endpoint's description](reference/04-endpoint/) and understand how to form an import request.
+		[Visit the endpoint's description](reference/04-endpoint/) and understand how to form an update request.
 	</Card>
 </CardGrid>
