--- a/documentation/src/content/docs/reference/04 endpoint.mdx
+++ b/documentation/src/content/docs/reference/04 endpoint.mdx
@@ -5,7 +5,7 @@ description: How to reach the endpoint and basic settings around the HTTP Header
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 
 :::note
-<h4>The API URL of the update is</h4>
+<h4>The ahead profiles API URL is</h4>
 <h5>htt<span>ps://connect</span>.aheadintranet.com/api/PeopleImport</h5>
 :::
 
